# llm-interaction

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml  pytest.ini
docs/: design.md
src/llm_interaction/: __init__.py  _schema.py  backend.py  client.py  parsing.py  response.py  tool.py
tests/: conftest.py  test_chat_completions.py  test_client.py  test_context.py  test_databricks.py  test_deepseek.py  test_integration.py  test_integration_databricks.py  test_integration_litellm.py  test_litellm.py  test_local.py  test_openrouter.py  test_parsing.py  test_response.py  test_tool.py
