[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "llm-interaction"
version = "0.1.3"
description = "Async OpenAI Responses API client with typed tool calling, lazy output parsing, and Azure/Databricks backends"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Sondre 'Ooki' Glimsdal", email = "sondre.glimsdal@gmail.com" },
]
dependencies = [
    "openai>=1.0",
    "jinja2>=3.0",
    "json-repair>=0.1",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "pydantic>=2.0",
]

[project.urls]
Homepage = "https://github.com/ooki/llm-interaction"
Repository = "https://github.com/ooki/llm-interaction"

[project.optional-dependencies]
databricks = [
    "databricks-sdk>=0.20",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.hatch.build.targets.wheel]
packages = ["src/llm_interaction"]
